BREAKING CHANGE: Redesing Parameters module (#136)
* add test marks

* add a separate class for figshare `FigshareAPIClient`

* add a separate class `FileManager`

* add a separate class `ParameterManager` and tests

* create fig_share mark to mark the end-to-end tests that calls the figshare api

* add new design for the `Parameter` class in the parameters.py module

* correct the coverage path in pre-commit hooks

* arr hooks for notebooks and docstring

* add docstring and examples for the parameters.py module

* ignore fig_share tests in ci

* ignore whitespaces and ellipsis in the pre-commit hooks

* move ignoring the whitespaces and ellipsis to the pre-commit hooks

* correct the downloaded parameters path

* make the download_dir optional for the `get_parameters` method

* mock the `os.path.dirname` to return the src/Hapi in ci instead of the package installation

* depend on HAPI_DATA_DIR environment variable to store the parameters

* remove the mock

* use the `HAPI_DATA_DIR` environment variable in all methods in the `inputs` module.

* use the `HAPI_DATA_DIR` environment variable in all methods in the `parameters` module.

* clean

* validate paths before reading data

* solve the issue of fig_share tests were not running with other tests

* mock the mkdir method in the Parameter constructor method in the TestParameterMock

* mock the integration test for the get_parameters to download only one parameter set

* mock the integration test for the get_parameters to download only one parameter set

* return the fig_share marker

* add CLI for the parameters module

* correct wrong import of the descriptors module from statista

* add the `HAPI_DATA_DIR` to the documentations

* restrict the URL schemes allowed, to ensure that only permitted schemes like http and https are allowed

* add the changes to the history file

* replace the `urlretrieve` with `requests` for vulnerability

* update readt

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,13 +95,22 @@ max-line-length = 88
 max-complexity = 18
 select = "B,C,E,F,W,T4"
 
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 88
+
 
 [tool.pytest.ini_options]
 markers = [
     "vfs: mark a test as a virtual file system.",
     "slow: mark test as slow.",
     "fast: mark test as fast.",
-    "plot: test plotting function optional package (deselect with '-m \"not plot\"')"
+    "plot: test plotting function optional package (deselect with '-m \"not plot\"')",
+    "e2e: end-to-end test (deselect with '-m \"not e2e\"')",
+    "mock: mock test (deselect with '-m \"not mock\"')",
+    "integration: mock test (deselect with '-m \"not integration\"')",
+    "fig_share: mock test (deselect with '-m \"not fig_share\"')"
 ]
 
 
@@ -109,6 +118,10 @@ markers = [
 requires = [
     "setuptools>=61",
     "wheel",
-#    "tomli>=1.1.0",
 ]
 build-backend = "setuptools.build_meta"
+
+[project.scripts]
+download-parameters = "Hapi.parameters.parameters:main"
+download-parameter-set = "Hapi.parameters.parameters:main"
+list-parameter-names = "Hapi.parameters.parameters:main"
